Use wheel from pypi

--- a/content/rosettasciio.ipynb
+++ b/content/rosettasciio.ipynb
@@ -6,9 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "wheel = [fname for fname in os.listdir() if \".whl\" in fname][0]\n",
-    "wheel"
+    "%pip install -q rosettasciio"
    ]
   },
   {
@@ -17,8 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import micropip\n",
-    "await micropip.install(f\"emfs:{wheel}\")"
+    "import rsciio"
    ]
   },
   {
@@ -27,16 +24,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import rsciio\n",
     "rsciio.__version__"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
