Update notebook to install hyperspy without `--pre` flag now that hyperspy 2.0 is released

--- a/content/hyperspy.ipynb
+++ b/content/hyperspy.ipynb
@@ -4,7 +4,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Install matplotlib"
+        "## Install hyperspy and ipympl"
       ]
     },
     {
@@ -15,15 +15,22 @@
       },
       "outputs": [],
       "source": [
-        "%pip install -q ipympl"
+        "%pip install -q ipympl hyperspy"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "trusted": true
+      },
+      "source": [
+        "# Activate interactive matplotlib plotting (`widget` backend from ipympl library)"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "trusted": true
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
         "%matplotlib widget"
@@ -33,47 +40,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Install RosettaSciIO and HyperSpy"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "trusted": true
-      },
-      "outputs": [],
-      "source": [
-        "%pip install -q hyperspy --pre"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
         "## Try hyperspy"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "trusted": true
-      },
-      "outputs": [],
-      "source": [
-        "import rsciio"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "trusted": true
-      },
-      "outputs": [],
-      "source": [
-        "rsciio.__version__"
       ]
     },
     {
