Install hyperspy with hyperspy-gui-ipywidgets

--- a/content/hyperspy.ipynb
+++ b/content/hyperspy.ipynb
@@ -15,7 +15,7 @@
       },
       "outputs": [],
       "source": [
-        "%pip install -q ipympl hyperspy"
+        "%pip install -q ipympl hyperspy[gui-jupyter]"
       ]
     },
     {
