--- a/content/hyperspy.ipynb
+++ b/content/hyperspy.ipynb
@@ -15,7 +15,8 @@
       },
       "outputs": [],
       "source": [
-        "%pip install -q ipympl hyperspy[gui-jupyter]"
+        "%pip install ipywidgets==8.1.3\n",
+        "%pip install ipympl hyperspy[gui-jupyter]"
       ]
     },
     {
