--- a/content/rosettasciio.ipynb
+++ b/content/rosettasciio.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install -q rosettasciio"
+    "%pip install rosettasciio"
    ]
   },
   {
